--- a/src/Card.css
+++ b/src/Card.css
@@ -18,8 +18,8 @@
 }
 
 .card-image {
-    width: 180px; 
-    height: 180px; 
+    width: 100px; 
+    height: 100px; 
     object-fit: cover; 
     border-radius: 8px; 
 }
@@ -43,11 +43,12 @@
     font-size: 16px;
     margin-top: 10px; 
     width: 100%; 
-    align-self: center; 
+    align-self: center;
+    transition: background-color 0.3s, opacity 0.3s; 
 }
 
 .card-grid {
-    max-height: 400px; 
+    max-height: 60vh; 
     overflow-y: auto; 
     margin-top: 20px;
     padding: 20px;
@@ -56,4 +57,9 @@
 
 .button {
     align-items: center;
+}
+
+.add-button.added {
+    background-color: #28a745; 
+    opacity: 0.7; 
 }
