--- a/src/EditOrder.css
+++ b/src/EditOrder.css
@@ -1,4 +1,3 @@
-/* Header con el botón de regreso */
 header {
   text-align: center;
   margin-top: 10px;
@@ -23,7 +22,7 @@ header {
   opacity: 0.7;
 }
 
-/* Contenedor principal de la edición de orden */
+
 .edit-order-container {
   padding: 30px;
   padding-left: 30px;
@@ -42,14 +41,14 @@ header {
   max-height: 600px;
 }
 
-/* Lista de órdenes */
+
 .order-list {
-  max-height: 60vh; /* Limita la altura del contenedor */
-  overflow-y: auto; /* Permite el desplazamiento vertical */
-  padding: 10px; /* Espaciado dentro del contenedor */
+  max-height: 60vh; 
+  overflow-y: auto; 
+  padding: 10px; 
 }
 
-/* Tarjeta de orden */
+
 .order-card {
     text-align: center;
     margin-top: 20px;
